ttt config...work in progress